--- a/Socks/Base.lproj/Main.storyboard
+++ b/Socks/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="jqs-sC-Tv9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="jqs-sC-Tv9">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -66,7 +66,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.51764705882352935" green="0.51764705882352935" blue="0.51764705882352935" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="bottom" secondItem="YYg-ei-Yzx" secondAttribute="bottom" constant="50" id="UTy-Jl-XVS"/>
                                     <constraint firstAttribute="trailing" secondItem="YYg-ei-Yzx" secondAttribute="trailing" id="Y1A-fa-dO9"/>
@@ -158,11 +158,12 @@
                         <outlet property="pauseBtn" destination="y4e-SY-eMD" id="KMj-EW-n87"/>
                         <outlet property="score_lbl" destination="YYg-ei-Yzx" id="gH3-WX-crP"/>
                         <outlet property="skView" destination="8vL-Ra-F1O" id="yuI-eK-Fmy"/>
+                        <segue destination="jnD-CX-D9Y" kind="push" id="SzJ-6l-dv1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btX-cZ-eVz" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-615" y="-607"/>
+            <point key="canvasLocation" x="-311" y="-615"/>
         </scene>
         <!--Main View Controller-->
         <scene sceneID="WBZ-nb-8ga">
@@ -177,7 +178,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kos-Uf-TQt">
-                                <rect key="frame" x="64" y="487" width="192" height="36"/>
+                                <rect key="frame" x="64" y="474" width="192" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="192" id="357-8W-LLC"/>
@@ -194,14 +195,14 @@
                                 </connections>
                             </button>
                             <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" misplaced="YES" progressViewStyle="bar" translatesAutoresizingMaskIntoConstraints="NO" id="1jq-b9-xnf">
-                                <rect key="frame" x="0.0" y="533" width="320" height="36"/>
+                                <rect key="frame" x="0.0" y="431" width="320" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="35" id="Lae-Rl-QzE"/>
                                 </constraints>
                                 <color key="progressTintColor" red="0.40000000596046448" green="1" blue="0.40000000596046448" alpha="1" colorSpace="calibratedRGB"/>
                             </progressView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="sox-falling.png" translatesAutoresizingMaskIntoConstraints="NO" id="lmM-tF-zDH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sox-falling.png" translatesAutoresizingMaskIntoConstraints="NO" id="lmM-tF-zDH">
                                 <rect key="frame" x="39" y="32" width="243" height="116"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -209,7 +210,7 @@
                                     <constraint firstAttribute="height" constant="116" id="zOf-Nu-K8B"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Player" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QNi-uC-5RY">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QNi-uC-5RY">
                                 <rect key="frame" x="0.0" y="273" width="126" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <constraints>
@@ -230,20 +231,6 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2sq-7i-BYf">
-                                <rect key="frame" x="0.0" y="302" width="126" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="126" id="1oI-Ce-UBW"/>
-                                    <constraint firstAttribute="height" constant="36" id="py1-76-59i"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="25"/>
-                                <size key="titleShadowOffset" width="-2" height="2"/>
-                                <state key="normal" title="Me">
-                                    <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                            </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CDJ-NA-OJ9">
                                 <rect key="frame" x="194" y="302" width="126" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -257,34 +244,94 @@
                                 <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <size key="shadowOffset" width="2" height="2"/>
                             </label>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="48T-Cy-9AE">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="xzV-jq-L3v"/>
+                                </constraints>
+                            </adBannerView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oQB-Jc-0na">
+                                <rect key="frame" x="0.0" y="302" width="126" height="36"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="36" id="YOX-fc-rtQ"/>
+                                    <constraint firstAttribute="width" constant="126" id="ZJj-5Z-i4i"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-CondensedBold" family="Helvetica Neue" pointSize="25"/>
+                                <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <color key="shadowColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <size key="shadowOffset" width="2" height="2"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="2sq-7i-BYf" firstAttribute="top" secondItem="QNi-uC-5RY" secondAttribute="bottom" constant="8" id="0LS-1b-FHl"/>
                             <constraint firstItem="lmM-tF-zDH" firstAttribute="top" secondItem="Z5f-Eu-Ugk" secondAttribute="bottom" constant="32" id="0sr-pU-OGh"/>
+                            <constraint firstItem="48T-Cy-9AE" firstAttribute="leading" secondItem="2IH-0B-tA2" secondAttribute="leading" id="3qh-Xg-aPt"/>
                             <constraint firstAttribute="trailing" secondItem="1jq-b9-xnf" secondAttribute="trailing" id="4xR-3U-tGv"/>
                             <constraint firstItem="QNi-uC-5RY" firstAttribute="leading" secondItem="2IH-0B-tA2" secondAttribute="leading" id="6Gh-2z-T2N"/>
-                            <constraint firstItem="1jq-b9-xnf" firstAttribute="top" secondItem="Kos-Uf-TQt" secondAttribute="bottom" constant="10" id="BKz-C5-p86"/>
+                            <constraint firstItem="oQB-Jc-0na" firstAttribute="leading" secondItem="2IH-0B-tA2" secondAttribute="leading" id="Ati-Nn-2ej"/>
                             <constraint firstAttribute="trailing" secondItem="EWK-uG-bw8" secondAttribute="trailing" id="CjC-Ll-J3q"/>
+                            <constraint firstItem="Kos-Uf-TQt" firstAttribute="top" secondItem="1jq-b9-xnf" secondAttribute="bottom" constant="10" id="FD4-6f-emZ"/>
                             <constraint firstAttribute="centerY" secondItem="QNi-uC-5RY" secondAttribute="centerY" id="Ggx-zG-PZL"/>
-                            <constraint firstItem="2sq-7i-BYf" firstAttribute="leading" secondItem="2IH-0B-tA2" secondAttribute="leading" id="KDV-0g-VjU"/>
                             <constraint firstItem="Kos-Uf-TQt" firstAttribute="centerX" secondItem="2IH-0B-tA2" secondAttribute="centerX" id="LCk-0g-MwK"/>
+                            <constraint firstItem="oQB-Jc-0na" firstAttribute="top" secondItem="QNi-uC-5RY" secondAttribute="bottom" constant="8" id="PEl-K6-vdX"/>
+                            <constraint firstItem="48T-Cy-9AE" firstAttribute="top" secondItem="Kos-Uf-TQt" secondAttribute="bottom" constant="8" id="Pm8-ax-ooS"/>
                             <constraint firstItem="1jq-b9-xnf" firstAttribute="leading" secondItem="2IH-0B-tA2" secondAttribute="leading" id="bw9-UL-I25"/>
                             <constraint firstItem="CDJ-NA-OJ9" firstAttribute="top" secondItem="EWK-uG-bw8" secondAttribute="bottom" constant="8" id="cSM-d0-sbt"/>
                             <constraint firstAttribute="trailing" secondItem="CDJ-NA-OJ9" secondAttribute="trailing" id="cmg-Ov-ttL"/>
                             <constraint firstAttribute="centerY" secondItem="EWK-uG-bw8" secondAttribute="centerY" id="ija-Jp-nMq"/>
-                            <constraint firstItem="RHx-pY-r5a" firstAttribute="top" secondItem="1jq-b9-xnf" secondAttribute="bottom" id="v3X-oK-5xh"/>
+                            <constraint firstAttribute="trailing" secondItem="48T-Cy-9AE" secondAttribute="trailing" id="rJL-gg-P8r"/>
+                            <constraint firstItem="RHx-pY-r5a" firstAttribute="top" secondItem="48T-Cy-9AE" secondAttribute="bottom" id="sho-uK-Vu2"/>
+                            <constraint firstAttribute="centerX" secondItem="lmM-tF-zDH" secondAttribute="centerX" id="uPV-bM-sOt"/>
                         </constraints>
                     </view>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <connections>
                         <outlet property="progressBar" destination="1jq-b9-xnf" id="zax-zY-pyM"/>
+                        <outlet property="scoreHighest" destination="CDJ-NA-OJ9" id="6p7-Mq-JJP"/>
+                        <outlet property="scoreLast" destination="oQB-Jc-0na" id="i5c-q3-29X"/>
                         <outlet property="startBtn" destination="Kos-Uf-TQt" id="5UG-JX-yfb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QIu-CU-HYR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1414" y="-316"/>
+        </scene>
+        <!--View Controller - Contunue-->
+        <scene sceneID="LBI-Zp-r21">
+            <objects>
+                <viewController id="jnD-CX-D9Y" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="A95-S2-yD5"/>
+                        <viewControllerLayoutGuide type="bottom" id="6dZ-0j-y0F"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="PAT-Bo-8Um">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UTj-kc-bmu">
+                                <rect key="frame" x="0.0" y="518" width="320" height="50"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            </adBannerView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v3N-8n-EAB">
+                                <rect key="frame" x="120" y="20" width="80" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="START">
+                                    <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="disabled" title="WAIT"/>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Contunue" id="Ni4-CT-21X"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Cgu-yd-ehD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-303" y="84"/>
         </scene>
     </scenes>
     <resources>
