--- a/Socks/Base.lproj/Main.storyboard
+++ b/Socks/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="jqs-sC-Tv9">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="jqs-sC-Tv9">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <scenes>
         <!--Game View Controller-->
@@ -16,10 +17,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SVB-hC-ZYp" customClass="SKView">
-                                <rect key="frame" x="0.0" y="60" width="320" height="508"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
                             <imageView clipsSubviews="YES" contentMode="scaleToFill" image="grey-bevel-640x88.png" translatesAutoresizingMaskIntoConstraints="NO" id="Ev3-a3-RvW">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                                 <constraints>
@@ -40,6 +37,10 @@
                                     <action selector="pauseUnpause:" destination="LcV-zE-7iS" eventType="touchUpInside" id="SKg-Aa-7lD"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SVB-hC-ZYp" customClass="SKView">
+                                <rect key="frame" x="0.0" y="60" width="320" height="508"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jR3-q6-8mI">
                                 <rect key="frame" x="270" y="460" width="50" height="50"/>
                                 <constraints>
@@ -67,7 +68,7 @@
                                     <action selector="gameOverPressed:" destination="LcV-zE-7iS" eventType="touchUpInside" id="2Lw-Co-MSr"/>
                                 </connections>
                             </button>
-                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="izb-aU-rKo">
+                            <adBannerView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.30000000000000004" contentMode="center" translatesAutoresizingMaskIntoConstraints="NO" id="izb-aU-rKo">
                                 <rect key="frame" x="0.0" y="518" width="320" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="9Nr-fz-pd8"/>
@@ -119,6 +120,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="b0H-hm-oTm"/>
                     <connections>
+                        <outlet property="adView" destination="izb-aU-rKo" id="DCr-hK-Z9W"/>
                         <outlet property="gameOverBtn" destination="izM-bg-bWW" id="R73-s5-L7i"/>
                         <outlet property="lost_lbl" destination="rem-4U-rjw" id="pc6-cc-h1V"/>
                         <outlet property="pauseBtn" destination="N8I-zE-XHZ" id="D3N-Hc-xsa"/>
